[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropbox-uploader"
version = "1.0.0"
description = "A robust utility for uploading files to Dropbox"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["dropbox", "upload", "file-transfer", "automation", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: System :: Archiving",
]
dependencies = [
    "dropbox>=11.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]

[project.scripts]
dropbox-upload = "dropbox_uploader.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/dropbox-uploader"
Documentation = "https://github.com/yourusername/dropbox-uploader#readme"
Repository = "https://github.com/yourusername/dropbox-uploader.git"
Issues = "https://github.com/yourusername/dropbox-uploader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dropbox_uploader*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dropbox_uploader"
